--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ psycopg2>=2.8.4
 numpy~=2.0.2
 pandas~=2.2.3
 moviepy~=2.1.1
-pyannote.audio
+pyannote.audio == 3.1.1
 transformers
 pydub
 openai-whisper
@@ -11,3 +11,4 @@ textblob~=0.18.0.post0
 datetime~=5.5
 torch~=2.5.1
 soundfile~=0.12.1
+torchaudio
